--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "rehype-pretty-code": "^0.14.1",
     "resend": "^6.5.2",
     "shiki": "^3.17.0",
